change default translation

--- a/data.json.example
+++ b/data.json.example
@@ -1,5 +1,5 @@
 {
-  "defaultTranslation": "ESV",
+  "defaultTranslation": "NET",
   "esvApiKey": "YOUR_ESV_API_KEY_HERE",
   "showTranslationName": true,
   "showReference": true,
