--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
   "description": "Seamlessly integrate Bible verses into your notes with support for multiple translations.",
   "author": "jArchitect",
   "authorUrl": "https://jarchitect.org",
-  "fundingUrl": "https://your-funding-page.com",
+  "fundingUrl": "https://buymeacoffee.com/jarchitect",
   "isDesktopOnly": false
 }
