--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
   "author": "jArchitect",
   "authorUrl": "https://jarchitect.org",
   "fundingUrl": "https://buymeacoffee.com/jarchitect",
-  "isDesktopOnly": false,
+  "isDesktopOnly": false
 }
